--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ serde = { version = "1.0", default-features = false, optional = true }
 
 [dev-dependencies]
 bincode = "1.2"
+serde_derive = "1.0"
+serde-xml-rs = "0.4"
 
 [features]
 default = ["std"]
